# cmd/api/main.go
@@ -12,6 +12,9 @@ import (
 // @version     1.0
 // @description Konabra is a smart, community-powered transport and road safety platform for Ghana. This API supports live incident reporting, road condition updates, and data analytics integration.
 // @BasePath    /
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 func main() {
 	// Initialize the API application
 	api := builds.NewApi()
